[package]
name = "taper"
version = "0.1.0"
authors = ["Heavenstone <malolegendrelemaire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
serde = { version = "1.0", default-features = false }
flume = "0.10"

tokio = { version = "1", features = ["rt", "net", "io-util"], optional = true }

[features]
default = []
async = ["tokio"]
