[package]
name = "taper"
version = "0.1.0"
authors = ["Heavenstone"]
edition = "2018"
description = "A simple and easy tcp packet based network communication library"
readme = "README.md"
repository = "https://github.com/Heavenston/taper"
license = "MIT"
keywords = ["gamedev","networking","tcp","async","tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
serde = { version = "1.0", default-features = false }
flume = "0.10"

tokio = { version = "1", features = ["rt", "net", "io-util"], optional = true }

[features]
default = []
async = ["tokio"]
